--- a/Project/rai_build.yml
+++ b/Project/rai_build.yml
@@ -17,5 +17,7 @@ commands:
       - /bin/bash -c "cmake /ece408/project/ && make -j8"
       # You may modify the commands below. Uncomment/Comment lines based on the milestone
       # - /bin/bash -c "time ./m1 1000 && gprof -Q m1 gmon.out > outfile"
-      - /bin/bash -c "nv-nsight-cu-cli --section '.*' -o analysis_file ./m2 100"
+      # - /bin/bash -c "nsys profile --stats=true ./m2 100"
+      # - /bin/bash -c "nsys profile --stats=true ./m3 100"
+      - /bin/bash -c "time ./m3 10000"
       #- /bin/bash -c "./final"
